# Game-of-Life

./: CMakeLists.txt  Makefile  README.md
game/: CMakeLists.txt
game/bit_operations/: CMakeLists.txt  bits.h
game/grid/: CMakeLists.txt  grid.cpp  grid.h
game/src/: CMakeLists.txt  main.cpp
game/utilities/: CMakeLists.txt  utils.h
game/window/: CMakeLists.txt  window.cpp  window.h
game/world/: CMakeLists.txt  world.cpp  world.h
src/: CMakeLists.txt  main.cpp
